--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -123,6 +123,14 @@ code {
     #font {
       font-size: 1.1rem;
     }
+    .sectionsearch {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
     .pessoas {
       border: solid 1px rgb(51, 255, 0);
       width: 90%;
