--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -166,6 +166,36 @@ code {
         height: 3vh;
       }
     }
+    .openProcess {
+      width: 90%;
+      border: 1px solid rgb(136, 176, 25);
+      margin: auto;
+      height: 90%;
+      & > :first-child {
+        border: 1px solid rgb(25, 113, 176);
+      }
+      & > :nth-child(2) {
+        border: solid 1px rgb(255, 136, 0);
+        width: 99.7%;
+        height: 94.2%;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        overflow: scroll;
+        .linePessoa {
+          border: solid 1px rgb(255, 0, 144);
+          width: 100%;
+          height: 8%;
+          min-height: 25px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          background-color: rgb(174, 232, 174);
+          color: rgb(0, 0, 0);
+          padding: 0 20px;
+        }
+      }
+    }
   }
 }
 .footer {
