--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -51,7 +51,7 @@ body {
     // background-position: top;
     background-repeat: no-repeat;
     background-size: contain;
-    background-position-x: 160px;
+    background-position-x: 11vw;
     background-color: black;
   }
 }
@@ -154,10 +154,16 @@ body {
         text-align: center;
       }
       .estadoCheck {
-        // margin-bottom: 5%;
-        border: solid 1px red;
-        width: 17%;
-        height: 6vh;
+        // border: 1px solid red;
+        width: 10vw;
+        height: 6.5vh;
+        margin-left: 5%;
+        // border-radius: 15%;
+        #btnInput {
+          width: 100%;
+          height: 100%;
+          border-radius: 10px;
+        }
       }
     }
     .listaBox {
