--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -190,7 +190,7 @@ body {
     .form-hero {
       overflow: scroll;
       width: 50vw;
-      height: 63vh;
+      height: 62vh;
       // border: 1px solid red;
       position: relative;
       display: flex;
@@ -284,6 +284,7 @@ body {
       font-size: 1.1rem;
     }
     .sectionsearch {
+      // border: 1px solid purple;
       width: 100%;
       height: 100%;
       display: flex;
@@ -292,50 +293,72 @@ body {
       flex-direction: column;
     }
     .pessoas {
-      border: solid 1px rgb(51, 255, 0);
+      padding: 0.35vw;
+      // border: solid 1px rgb(51, 255, 0);
       width: 90%;
       height: 85%;
       display: flex;
       flex-wrap: wrap;
       align-content: flex-start;
-      gap: 5px;
+      gap: 0.35vw;
+      color: rgb(204, 204, 204);
+      .img {
+        background-color: var(--current-bg);
+        width: 80%;
+        height: 80%;
+        border-radius: 0.5vh;
+        // margin-bottom: 0.4vw;
+        margin-top: 1.2vh;
+        margin-left: 0.77vh;
+      }
       overflow: scroll;
       .usuario {
         display: grid;
         grid-template-columns: 1fr 2fr;
         border: solid 1px rgb(169, 135, 135);
         border-radius: 5px;
-        height: 18%;
+        // height: 18%;
         min-width: 32.5%;
+        padding-bottom: 0.37vh;
       }
     }
     .listaBusca {
+      margin-bottom: 1vh;
+      color: var(--color);
       font-size: 1.1rem;
-      border: solid 1px blue;
-      width: 90%;
+      // border: solid 1px blue;
+      width: 52vw;
       // height: 95%;
       margin-top: 2% !important;
       .busca {
         display: flex;
       }
       label {
-        min-width: 130px;
+        min-width: 8.5vw;
       }
       input {
-        width: 100%;
-        height: 3vh;
+        width: 80%;
+        height: 3.5vh;
+        border-radius: 1vh;
+        color: var(--color);
+        background-color: var(--cor-bg-principal);
       }
     }
     .openProcess {
+      #p-open {
+        color: var(--color);
+        padding-left: 0.5vh;
+      }
       width: 90%;
-      border: 1px solid rgb(136, 176, 25);
+      border: 1px solid rgb(137, 137, 137);
       margin: auto;
       height: 90%;
       & > :first-child {
-        border: 1px solid rgb(25, 113, 176);
+        border-bottom: 1px solid rgb(137, 137, 137);
       }
       & > :nth-child(2) {
-        border: solid 1px rgb(255, 136, 0);
+        padding: 0.3vh;
+        // border: solid 1px rgb(255, 136, 0);
         width: 99.7%;
         height: 94.2%;
         display: flex;
@@ -343,15 +366,16 @@ body {
         align-content: flex-start;
         overflow: scroll;
         .linePessoa {
-          border: solid 1px rgb(255, 0, 144);
+          border: solid 1px var(--cor-bg-principal);
           width: 100%;
-          height: 8%;
+          height: 4vh;
+
           min-height: 25px;
           display: flex;
           justify-content: space-between;
           align-items: center;
           background-color: rgb(174, 232, 174);
-          color: rgb(0, 0, 0);
+          color: var(--cor-bg-principal) !important;
           padding: 0 20px;
         }
       }
