--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -451,3 +451,56 @@ body {
   justify-content: center;
   align-items: center;
 }
+#aguardando {
+  position: relative;
+  display: flex;
+  // border: 1px solid red;
+  width: 22vw;
+  padding-left: 0.5vw;
+}
+
+@import './animationsClone/variables';
+@import './animationsClone/mixins';
+@import './animationsClone/functions';
+
+$amount: 10px;
+
+@keyframes ball-pulse-sync {
+  33% {
+    transform: translateY($amount);
+  }
+  66% {
+    transform: translateY(-$amount);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@mixin ball-pulse-sync($n: 3, $start: 1) {
+  @for $i from $start through $n {
+    > div:nth-child(#{$i}) {
+      animation: ball-pulse-sync 1s delay(0.07s, $n, $i) infinite ease-in-out;
+    }
+  }
+}
+
+.ball-pulse-sync {
+  @include ball-pulse-sync();
+
+  > div {
+    @include balls();
+    @include global-animation();
+
+    display: inline-block;
+  }
+}
+.loader {
+  position: absolute;
+  left: 14vw;
+  top: 1vw;
+  color: #8e8e35 !important;
+  // rotate: 2vw;
+  padding-left: 1.5vw;
+  color: #42464d;
+}
