--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,6 +31,7 @@ body {
 }
 
 .navbar {
+  box-shadow: 0 0 3vw #202225;
   display: flex;
   flex-direction: row;
   background-color: var(--cor-bg-secondary);
@@ -91,6 +92,7 @@ body {
 }
 
 .section {
+  box-shadow: 0 0 3vw #202225;
   background-color: var(--cor-bg-secondary);
   display: flex;
   flex-direction: row;
@@ -225,6 +227,7 @@ body {
       justify-content: center;
     }
     .cadastro {
+      box-shadow: 0 0 2vw #202225;
       // height: 45vh;
       background-color: var(--cor-bg-3);
       padding: 1.5vh;
@@ -371,6 +374,10 @@ body {
         background-color: var(--cor-bg-principal);
       }
     }
+    #cadastrarbtn {
+      display: flex;
+      justify-content: center;
+    }
     .openProcess {
       #p-open {
         color: var(--color);
@@ -411,6 +418,7 @@ body {
   }
 }
 .footer {
+  box-shadow: 0 0 3vw #202225;
   a {
     color: #434446;
     text-decoration: none;
