--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -252,11 +252,17 @@ body {
         display: flex;
         justify-content: space-between;
       }
+
+      #first-input {
+        min-width: 11.4vw;
+        // display: none;
+      }
       .inputs {
         div {
           display: flex;
           justify-content: center;
         }
+
         input {
           // border: none;
           margin: 0 0.5vw;
@@ -265,7 +271,7 @@ body {
           font-size: 2vh;
           font-family: inherit;
           width: 100%;
-          border: 0;
+          // border: 0;
           border-bottom: 0.4vh solid var(--cor-bg-principal);
           outline: 0;
           color: var(--color);
@@ -531,4 +537,58 @@ $amount: 10px;
   display: flex;
   // justify-content: center;
   align-items: center;
+}
+#validation-errors {
+  // border: 1px solid red;
+  position: absolute;
+  width: 99.8vw;
+  height: 99.5vh;
+  left: 0vw;
+  top: 0vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0000008b;
+  #validation {
+    margin-left: 12.1vw;
+    // border: 1px solid blue;
+    width: 20vw;
+    height: 40vh;
+    background-color: wheat;
+    // display: none;
+    #validation-menssage {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 2px dotted var(--cor-bg-secondary);
+      #p1 {
+        width: 100%;
+        text-align: center;
+      }
+      #a1 {
+        background-color: var(--cor-bg-3);
+        width: 3.4vh;
+        height: 3.4vh;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        button {
+          text-decoration: none;
+          color: red;
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+    .errors {
+      p {
+        font-size: 1vw;
+        background-color: white;
+        margin: 0.3vh;
+        border-radius: 1vh;
+        padding-left: 1vh;
+        color: rgb(200, 1, 1);
+        font-weight: bold;
+      }
+    }
+  }
 }
